--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,9 +1,11 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-# one:
-#  name: MyString
-#  email: MyString
+one:
+ name: Ch Asuncion 
+ email: ch@email.com 
+ password_digest: <%= User.digest('password') %>
 
-# two:
-#  name: MyString
-#  email: MyString
+two:
+ name: Ch Asuncion Jr. 
+ email: chjr@email.com 
+ password_digest: <%= User.digest('password') %>
