--- a/test/fixtures/toys.yml
+++ b/test/fixtures/toys.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-# one:
-#  user: one
-#  name: MyString
-#
-# two:
-#  user: two
-#  name: MyString
+one:
+ owner: one
+ name: MyString
+
+two:
+ owner: two
+ name: MyString
