--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,11 +1,11 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
+ch:
  name: Ch Asuncion 
  email: ch@email.com 
  password_digest: <%= User.digest('password') %>
 
-two:
- name: Ch Asuncion Jr. 
+mv:
+ name: mv Asuncion Jr. 
  email: chjr@email.com 
  password_digest: <%= User.digest('password') %>
